[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcassette"
version = "0.1.0"
description = "Deterministic agent test recorder and replayer. Record live runs, replay as mocks. Zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "LaVon Rutledge", email = "32437530+lavrut@users.noreply.github.com" }
]
keywords = [
    "llm", "ai-agents", "testing", "replay", "mocking",
    "cassette", "deterministic", "vcr", "record"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []  # Zero external dependencies — pure Python stdlib only

[project.optional-dependencies]
dev = ["pytest", "hatch"]

[project.urls]
Homepage = "https://github.com/aenealabs/agentcassette"
Repository = "https://github.com/aenealabs/agentcassette"
Issues = "https://github.com/aenealabs/agentcassette/issues"
Changelog = "https://github.com/aenealabs/agentcassette/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcassette"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
